--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("../node_modules/femtocss/css/femtocss.css");
+html,body{
+  height: 100%;
+  margin:0;
+  padding: 0;
+}
+body{
+  background-color: brown;
+}
+#main{
+  background-color: #fdd;
+  margin-left: 280px;
+  height: 100%;
+  overflow: auto;
+}
+#sidebar{
+  background-color: white;
+  width: 280px;
+  height: 100%;
+  float: left;
+}
